use new colors component in the avatar, delete the old colors file and add an example

--- a/scopes/design/ui/Avatar/avatar.docs.mdx
+++ b/scopes/design/ui/Avatar/avatar.docs.mdx
@@ -39,3 +39,18 @@ An avatar component, consisting of 3 different types of Avatar:
   );
 };
 ```
+
+An Avatar with no picture, will show the initials of the user name, and use the first letter to determine the background-color.
+```js live
+() => {
+  const letters = [
+  'a' , 'b' , 'c' , 'd' , 'e' , 'f' , 'g' , 'h' , 'i' ,
+  'j' , 'k' , 'l' , 'm' , 'n' , 'o' , 'p' , 'q' , 'r' , 's' ,
+  't' , 'u' , 'v' , 'w' , 'x' , 'y' , 'z' ];
+  return (
+    <div>
+      {letters.map((value) => <UserAvatar size={32} account={{ name: `${value}k` }} />)}
+    </div>
+  )
+}
+```
