--- a/scopes/design/ui/Avatar/avatar.docs.mdx
+++ b/scopes/design/ui/Avatar/avatar.docs.mdx
@@ -18,7 +18,7 @@ An avatar component, consisting of 3 different types of Avatar:
   const accounts = {
     defAccount: { name: 'defaultAccount', type: 'default', profileImage: 'https://static.bit.dev/harmony/support.svg' },
     orgAccount: { name: 'defaultAccount', type: 'organization', profileImage: 'https://static.bit.dev/bit-logo.svg' },
-    userAccount: { name: 'defaultAccount', type: 'user', profileImage: 'https://static.bit.dev/harmony/github.svg' },
+    userAccount: { displayName: 'display name', name: 'defaultAccount', type: 'user', profileImage: 'https://static.bit.dev/harmony/github.svg' },
   };
 
   return (
@@ -35,6 +35,10 @@ An avatar component, consisting of 3 different types of Avatar:
         User avatar
         <UserAvatar size={32} account={accounts.userAccount} />
       </div>
+      <div>
+        User avatar with tooltip
+        <UserAvatar size={32} account={accounts.userAccount} showTooltip />
+      </div>
     </div>
   );
 };
@@ -49,7 +53,9 @@ An Avatar with no picture, will show the initials of the user name, and use the 
   't' , 'u' , 'v' , 'w' , 'x' , 'y' , 'z' ];
   return (
     <div>
-      {letters.map((value) => <UserAvatar size={32} account={{ name: `${value}k` }} />)}
+      {letters.map((value, index) => 
+        <UserAvatar size={32} account={{ name: `${value}k` }} showTooltip key={index} />
+      )}
     </div>
   )
 }
