fix: add mdx page for compositions and tests

--- a/scopes/compositions/instructions/instructions.mdx
+++ b/scopes/compositions/instructions/instructions.mdx
@@ -1,4 +1,4 @@
-# No compositions found
+## No compositions found
 
 View components in any context you choose or incorporate it into separate standalone "apps" to validate its behavior in different situations.
 
