--- a/scopes/defender/instructions/instructions.mdx
+++ b/scopes/defender/instructions/instructions.mdx
@@ -1,4 +1,4 @@
-# No tests found
+## No tests found
 
 Bit watches code and dependency changes and runs component tests to validate they are still working as expected.
 
