feat: add docs and properties instructions

--- a/scopes/compositions/instructions/adding-compositions/adding-compositions.mdx
+++ b/scopes/compositions/instructions/adding-compositions/adding-compositions.mdx
@@ -1,9 +1,6 @@
 ## Adding Compositions
 
-'Compositions' are, essentially, small apps that exhibit and test a component in various potential usages.
-They serve as a way to run manual and automated integration tests, before such integrations are done by consumers of that component.
-
-Moreover, a component's composition is a way to demonstrate that component for other developers looking to use it, and non-developers, such as designers and product managers, looking to inspect it.
+Compositions are a way to render your component so as to demonstrate that component for other developers looking to use it, and non-developers, such as designers and product managers, looking to inspect it.
 
 Adding compositions to a component is done by creating a file in the component's directory, using the `*.composition.*` pattern.
 
@@ -16,9 +13,9 @@ For example:
     └── button.tsx
 ```
 
-Each composition is a standard usage of a component (requiring no special syntax) that is exported with a name.
+You can create various compositions to showcase different usages of your component.
 
-For example, the following is a composition of the 'button' component.
+Basic Button:
 
 ```js
 import React from 'react';
@@ -26,6 +23,17 @@ import { Button } from './button';
 
 export const BasicButton = () => {
   return <Button text="click me" />;
+};
+```
+
+Primary Button:
+
+```js
+import React from 'react';
+import { Button } from './button';
+
+export const PrimaryButton = () => {
+  return <Button type="primary" text="click me" />;
 };
 ```
 
