--- a/scopes/compositions/instructions/adding-compositions/adding-compositions.mdx
+++ b/scopes/compositions/instructions/adding-compositions/adding-compositions.mdx
@@ -2,7 +2,7 @@
 
 Compositions are a way to render your component so as to demonstrate that component for other developers looking to use it, and non-developers, such as designers and product managers, looking to inspect it.
 
-Adding compositions to a component is done by creating a file in the component's directory, using the `*.composition.*` pattern.
+> Adding compositions to a component is done by creating a file in the component's directory, using the `*.composition.*` pattern.
 
 For example:
 
