--- a/scopes/compositions/instructions/compositions-tip/compositions-tip.mdx
+++ b/scopes/compositions/instructions/compositions-tip/compositions-tip.mdx
@@ -1,5 +1,5 @@
 ## Adding Compositions
 
-To render your component - create a _\*.compositions.tsx_ file
+> To render your component - create a _\*.compositions.tsx_ file
 
-See the Compositions tab for more info.
+[See the Compositions tab for more info](/~compositions)
