--- a/scopes/react/react/docs/instructions/adding-docs/adding-docs.mdx
+++ b/scopes/react/react/docs/instructions/adding-docs/adding-docs.mdx
@@ -1,6 +1,6 @@
 ## Adding Documentation
 
-Document your components by creating a file with _\*.docs.mdx_ extension.
+> Document your components by creating a file with _\*.docs.mdx_ extension.
 
 ### DisplayName, Description and Labels
 
