fix: improve texts

--- a/scopes/component/changelog/instructions/exporting-components/exporting-components.mdx
+++ b/scopes/component/changelog/instructions/exporting-components/exporting-components.mdx
@@ -1,6 +1,6 @@
-# Exporting Components
+# Versioning and Exporting Components
 
-When we version or 'tag' a component, we commit changes and prepare it to be exported to a remote scope. This process most often includes compiling and testing, as well.
+To export your components to the cloud so that they can be installed elsewhere you first have to tag and then export your components. When we version or 'tag' a component, we commit changes and prepare it to be exported to a remote scope. This process most often includes compiling and testing, as well.
 
 ## Tag a component
 
@@ -16,8 +16,14 @@ Tag all components and bump the patch number of each component version
 bit tag --all
 ```
 
-## Export a Component
+## Export your Components
 
-TODO ADD HERE MORE INFO ON EXPORTING PLUS COMMANDS
+Once you have tagged your component you can then run the bit export command.
 
-[Learn more](https://harmony-docs.bit.dev/building-with-bit/versioning-components)
+```bash
+bit export
+```
+
+- [Learn more on Versioning Components](https://harmony-docs.bit.dev/building-with-bit/versioning-components)
+
+- [Learn more on Exporting Components](https://harmony-docs.bit.dev/building-with-bit/exporting-components)
