--- a/scopes/compositions/instructions/compositions-tip/compositions-tip.mdx
+++ b/scopes/compositions/instructions/compositions-tip/compositions-tip.mdx
@@ -2,4 +2,4 @@
 
 > To render your component - create a _\*.compositions.tsx_ file
 
-[See the Compositions tab for more info](/~compositions)
+[See the Compositions tab for more info](~compositions)
