--- a/scopes/react/react/docs/instructions/adding-docs/adding-docs.mdx
+++ b/scopes/react/react/docs/instructions/adding-docs/adding-docs.mdx
@@ -4,6 +4,8 @@
 
 ### DisplayName, Description and Labels
 
+Modify the component name by adding a displayName. Add a description for your component and labels which are used for searching on bit.dev.
+
 ```mdx
 ---
 displayName: My Component
@@ -13,6 +15,8 @@ labels: ['react', 'typescript', 'ui']
 ```
 
 ### Code Block and Live Playground
+
+Add a codeblock to show how your component can be used.
 
 ```js
 import { Hello } from './hello';
