--- a/scopes/compositions/instructions/adding-compositions/adding-compositions.mdx
+++ b/scopes/compositions/instructions/adding-compositions/adding-compositions.mdx
@@ -1,4 +1,4 @@
-## Adding Compositions
+## How to Add Compositions
 
 Compositions are a way to render your component so as to demonstrate that component for other developers looking to use it, and non-developers, such as designers and product managers, looking to inspect it.
 
