--- a/scopes/react/instructions/adding-docs/adding-docs.mdx
+++ b/scopes/react/instructions/adding-docs/adding-docs.mdx
@@ -1,8 +1,8 @@
-## Adding Documentation
+## How to Add Docs
 
 > Document your components by creating a file with _\*.docs.mdx_ extension.
 
-### DisplayName, Description and Labels
+### Add a DisplayName, Description and Labels
 
 Modify the component name by adding a displayName. Add a description for your component and labels which are used for searching on bit.dev.
 
@@ -14,7 +14,7 @@ labels: ['react', 'typescript', 'ui']
 ---
 ```
 
-### Code Block and Live Playground
+### Add a Code Block and Live Playground
 
 Add a codeblock to show how your component can be used.
 
