--- a/scopes/react/instructions/adding-docs/adding-docs.mdx
+++ b/scopes/react/instructions/adding-docs/adding-docs.mdx
@@ -1,35 +1,65 @@
 ## How to Add Docs
 
-> Document your components by creating a file with _\*.docs.mdx_ extension.
+> Document your components by creating a file with `.docs.mdx` extension.
 
-### Add a DisplayName, Description and Labels
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/cKMghSe_1RU?rel=0"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  rel="0"
+  allowfullscreen
+></iframe>
 
-Modify the component name by adding a displayName. Add a description for your component and labels which are used for searching on bit.dev.
+### Add a Description and Labels
+
+Add a description for your component and labels which are used for better discoverability of components.
 
 ```mdx
 ---
-displayName: My Component
 description: Description of my component
-labels: ['react', 'typescript', 'ui']
+labels: ['label1', 'label2', 'label3']
 ---
+```
+
+### Add some markdown
+
+```mdx
+# Add some markdown formated text
+
+List your component features:
+
+- feature 1
+- feature 2
 ```
 
 ### Add a Code Block and Live Playground
 
 Add a codeblock to show how your component can be used.
 
+````mdx
+import { Hello } from './hello';
 ```js
+() => {
+  return <Hello />;
+};
+``
+
+`
+````
+
+Add `live=true` to create a Live Playground:
+
+````mdx
 import { Hello } from './hello';
 
+```jsx live=true
 () => {
   return <Hello />;
 };
 ```
+````
 
-Add `live=true` to create a Live Playground:
-
-```jsx live=true
-() => {
-  return <p>Hello!</p>;
-};
-```
+Learn more about [Documenting Components](https://harmony-docs.bit.dev/building-with-bit/documenting-components)
