--- a/scopes/defender/instructions/adding-tests/adding-tests.mdx
+++ b/scopes/defender/instructions/adding-tests/adding-tests.mdx
@@ -1,5 +1,15 @@
 ## How to Add Tests
 
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/R0LWV2gcbf8?rel=0"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
 > Adding tests to a component is done by creating a file in the component's directory, using `*.spec.[ts|tsx|js|jsx]` or `*.test.[ts|tsx|js|jsx]`.
 
 The local dev server watches your components for any changes and reruns tests for your component and all its dependents for you.
