--- a/scopes/defender/instructions/adding-tests/adding-compositons.docs.mdx
+++ b/scopes/defender/instructions/adding-tests/adding-compositons.docs.mdx
@@ -1,14 +1,14 @@
 ---
-description: MDX component with instructions for how to add Tests
+description: MDX component with instructions for how to add Compositions
 labels: ['docs', 'instructions']
 ---
 
-MDX component that gives instructions on how to add tests.
+MDX component that gives instructions on how to add compositions.
 
 Basic Component Usage:
 
 ```js
-<AddingDocs />
+<AddingCompositions />
 ```
 
 For styling and syntax highlighting this can be wrapped in the MDXLayout Component and Theme Provider.
@@ -21,7 +21,7 @@ import { MDXLayout } from '@teambit/ui.mdx-layout';
 
 <ThemeContext>
   <MDXLayout>
-    <AddingDocs />
+    <AddingCompositions />
   </MDXLayout>
 </ThemeContext>;
 ```
