--- a/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
+++ b/scopes/design/ui/elements/level-icon/level-icon.docs.mdx
@@ -1,5 +1,5 @@
 ---
-description: 'An Icon component that shows different icons based on the level'
+description: 'An Icon component that shows different icons based on the level passed to it'
 labels: ['warning', 'success', 'error', 'info']
 ---
 
@@ -12,7 +12,7 @@ Icon Component with various levels:
 - success
 - error
 
-Component usage.
+Component usage:
 
 ```js
 <LevelIcon level="info" />
