--- a/scopes/react/instructions/adding-docs/adding-docs.docs.mdx
+++ b/scopes/react/instructions/adding-docs/adding-docs.docs.mdx
@@ -1,9 +1,9 @@
 ---
-description: MDX component with instructions for how to add Tests
+description: MDX component with instructions for how to add Docs
 labels: ['docs', 'instructions']
 ---
 
-MDX component that gives instructions on how to add tests.
+MDX component that gives instructions on how to add Docs.
 
 Basic Component Usage:
 
