--- a/scopes/react/instructions/adding-docs/adding-docs.mdx
+++ b/scopes/react/instructions/adding-docs/adding-docs.mdx
@@ -6,10 +6,9 @@
   width="560"
   height="315"
   src="https://www.youtube.com/embed/cKMghSe_1RU?rel=0"
-  title="YouTube video player"
+  title="Adding Docs for your Component"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  rel="0"
   allowfullscreen
 ></iframe>
 
